# anchor-engine-node

./: .PROJECT_ASSESSMENT.md  .QWEN.md  .ai-instructions.md  .dockerignore  .env  .env.example  .geminiignore  .gitattributes  .gitignore  .gitignore.new  .npmignore  .pre-commit-config.yaml  .zenodo.json  AGENTS_PLAN.md  AGENT_PROMPT.txt  ANDROID_BINARY_PLAN.md  ANDROID_DEV_TIMELINE.md  ARCHIVIST_AGENT_SUMMARY.md  AUDIT_REPORT.md  BOLT_MEMORY_GUIDE.md  BRANCH_MANAGEMENT_PLAN.md  BUG_FIX_PGLITE_SQL_PARAMS.md  BUG_FIX_SUMMARY_2026-03-03.md  CHANGELOG.md  CITATION.cff  CLAW-CODE-INTEGRATION.md  CLEANUP_REPORT.md  CODE-SIMPLIFICATION-IMPLEMENTATION.md  COMPLETED.md  COMPLETED_TASKS_SUMMARY.md  CONTEXT_CACHE_SUMMARY.md  CONTRIBUTING.md  CRITIQUE.md  CROSS_PLATFORM_SETUP.md  CURRENT_STATUS_SUMMARY.md  DISTILLATION_V2_AB_TEST_RESULTS.md  DISTILLATION_V2_COMPLETE.md  DOCUMENTATION_CLEANUP.md  DOCUMENTATION_INVENTORY.md  Dockerfile  (+344 more)
archive/v1_python_backend/: STARTUP.md  backend-launcher.bat  combined_text.txt  pyproject.toml  read_all.py  start_embedding_server.py  start_llm_gemma3_server.py  start_llm_minimight.py  start_llm_ocr_server.py  wipe_graph.py
archive/v1_python_backend/anchor-chat/: main.py  requirements.txt
archive/v1_python_backend/backend/: .coverage  .env.example  .gitignore  CHANGELOG.md  CITATIONS.md  CONFIGURATION.md  ark_corpus.jsonl  config.yaml  debug_chat.py  debug_neo4j_counts.py  debug_plan.py  docker-compose.test.yml  ece.spec  models.json  prompt-logs.txt  pyproject.toml  pytest.ini  read_all.py  requirements.txt  run_tests.bat  run_tests.sh  test_ws.py  verify_config_2.py  verify_yaml.py
archive/v1_python_backend/backend/archive/: C2C_DELIVERABLE_SUMMARY.md  C2C_TECHNICAL_ASSESSMENT.md  C2C_USAGE_GUIDE.md  DEPLOYMENT.md  ENTITY_EXTRACTION_SUMMARY.md  INDEX.md  README.md  README_BUILD.md  SETUP_COMPLETE.md  STATUS.md  build_knowledge_graph.py  check_migration_status.py  example.txt  example_memories.txt  import_combined.py  import_combined_simplified.py  import_combined_text.py  import_combined_text_fixed.py  import_graphr1.py  import_memory.py  import_to_graph.py  launcher.py  memory.py.backup  migrate_summaries_to_neo4j.py  migrate_to_neo4j_phase1.py  migrate_to_neo4j_phase2.py  migrate_to_neo4j_phase3.py  sample_turns.jsonl  test_config.json
archive/v1_python_backend/backend/backups/: redis.conf
archive/v1_python_backend/backend/benchmarks/: README.md  __init__.py  compare_memlayer_vs_ece.py  test_cases.json
archive/v1_python_backend/backend/logs/: candidates_embeddings.csv  token_soup_scan.csv  weaver_commit_preview.csv  weaver_dry_run.csv  weaver_review.csv
archive/v1_python_backend/backend/plugins/: manager.py
archive/v1_python_backend/backend/scripts/: IMPORT_README.md  README.md  __init__.py  analyze_calibration_csv.py  assign_app_id_to_nodes.py  audit_content_quality.py  audit_memory_sources.py  auto_tune_llama.py  build_package.ps1  build_package.sh  check_db_nodes.py  check_fulltext_search_live.py  check_memory_contains.py  check_neo4j_connection.py  check_neo4j_port.ps1  check_specific_nodes.py  check_sybil.py  chronos_ingest.py  clean_memory_content.py  (+65 more)
archive/v1_python_backend/configs/: .env  .env.example  README.md  cline_mcp_settings.json.example  config.yaml
archive/v1_python_backend/logs/: server.log.1  server.log.2  server.log.3  server.log.4  server.log.5
archive/v1_python_backend/models/: DeepSeek-R1-Distill-Qwen-14B-abliterated-v2-Q4_K_M.gguf  ERNIE-4.5-0.3B-PT-F16.gguf  Gemma3-4B-Arceus-Servant.i1-Q6_K.gguf  Huihui-granite-4.0-h-tiny-abliterated.i1-Q4_K_M.gguf  Huihui-granite-4.0-h-tiny-abliterated.i1-Q6_K.gguf  Josiefied-Qwen3-4B-Instruct-2507-abliterated-v1.i1-Q6_K.gguf  L3.2-8X3B-MOE-Dark-Champion-Inst-18.4B-uncen-ablit_D_AU-Q4_k_m.gguf  L3.2-8X4B-MOE-V2-Dark-Champion-Inst-21B-uncen-ablit-D_AU-Q4_k_m.gguf  Llama-3.1-Nemotron-Nano-8B-v1-abliterated-Uncensored-Toxic-DPO.Q4_K_M.gguf  Mistral-7B-Heretic.Q8_0.gguf  OpenAI-20B-NEOPlus-Uncensored-IQ4_NL.gguf  Qwen2.5-1.5B-VibeThinker-heretic-uncensored-abliterated.Q8_0.gguf  Qwen2.5-1.5B-VibeThinker-heretic-uncensored-abliterated.f16.gguf  Qwen2.5-VL-3B-Instruct-Q8_0.gguf  Qwen3-8B-64k-Josiefied-Uncensored-NEO-Max-D_AU-Q4_K_M-imat.gguf  Qwen3-VLTO-TNG-12B-256k-NEO-imat-D_AU-Q6_K.gguf  VibeThinker-1.5B.i1-Q6_K.gguf  bge-m3-q4_k_m.gguf  embeddinggemma-300m.Q8_0.gguf  granite-4.0-h-7b-heretic.i1-Q4_K_M.gguf  huihui-ai.EXAONE-3.5-7.8B-Instruct-abliterated.Q8_0.gguf  orchestrator-8b-q4_k_m.gguf  orchestrator-8b-q8_0.gguf  qwen3-embedding-4b-q4_k_m.gguf
archive/v1_python_backend/overview/: system_architecture.md
archive/v1_python_backend/scripts/: build_extension.py  test_auto_detection.py  test_connection.py  test_gemma3_template.py  test_qwen3_template.py  validate_qwen3_config.py
archive/v1_python_backend/specs_archive/: memory-layer.spec.md  plan.md  spec.md
cli/: QWEN.md  README.md  __init__.py  ece_cli.py  pyproject.toml  setup.py
cli/.qwen/: PROJECT_SUMMARY.md
cli/ece_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
cpp/: BUILD_PAIN_POINTS.md  CMakeLists.txt  FINAL_SUMMARY.md  PACKAGING_GUIDE.md  PHASE1_COMPLETE.md  PHASE5_COMPLETE.md  PROJECT_STATUS.md  README.md  build.bat  build.sh  test_dll.c
cpp/include/: common.h  context_inflator.h  database.h  deduplicator.h  file_utils.h  graph_traversal.h  md5.h  physics_walker.h  simhash.h  transient_filter.h  types.h  unified_field_equation.h
cpp/napi/: CMakeLists.txt
cpp/napi/src/: anchor_core_napi.cpp
cpp/src/: anchor_core_ffi.cpp  context_inflator.cpp  database.cpp  deduplicator.cpp  file_utils.cpp  graph_traversal.cpp  md5.cpp  physics_walker.cpp  simhash.cpp  transient_filter.cpp  unified_field_equation.cpp
cpp/tests/: CMakeLists.txt  README.md  comprehensive.test.js  context-size.test.js  deduplicate.test.js  package-lock.json  package.json  simhash.test.js  simple.test.js  test-results.json  test_atom_binding.cpp  test_atom_metadata.cpp  test_database.cpp  test_graph_traversal.cpp  test_radial_inflation.js  test_simhash.cpp
cpp/tests/benchmarks/: README.md  run-benchmarks.js
(+2748 files in other folders)
