[project]
name = "chimaera-multi-model-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "RSBalchII",email = "robertbalchii@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "ddgs (>=9.5.2,<10.0.0)",
    "sentence-transformers (>=5.1.0,<6.0.0)",
    "chromadb-client (>=1.0.15,<2.0.0)",
    "duckduckgo-search (>=8.1.1,<9.0.0)",
    "onnx (>=1.18.0,<2.0.0)",
    "onnxruntime (>=1.18.0,<2.0.0)",
    "ollama (>=0.2.1,<1.0.0)",
    "pyautogui (>=0.9.54,<1.0.0)",
]

[tool.poetry]
packages = [
    { include = "agents" },
    { include = "chimaera" },
    { include = "crews" },
    { include = "tools" },
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
