[project]
name = "ece-cli"
version = "1.0.0"
description = "Enhanced Command-Line Interface for the External Context Engine"
authors = [{name = "ECE Development Team"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.24.0",
    "rich>=13.0.0",
    "pydantic>=1.8.0",
    "click>=8.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
ece-cli = "ece_cli:main"