cmake_minimum_required(VERSION 3.16)

add_executable(test_atom_metadata test_atom_metadata.cpp)
target_link_libraries(test_atom_metadata PRIVATE anchor_core)
add_test(NAME test_atom_metadata COMMAND test_atom_metadata)

add_executable(test_graph_traversal test_graph_traversal.cpp)
target_link_libraries(test_graph_traversal PRIVATE anchor_core)
add_test(NAME test_graph_traversal COMMAND test_graph_traversal)
