[project]
name = "ece-core"
version = "1.0.0"
description = "External Context Engine - Memory system for ADHD/Autism support"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "redis>=5.2.0",
    "httpx>=0.28.1",
    "openai>=1.54.0",
    "python-dotenv>=1.1.1",
    "pydantic>=2.10.2",
    "pydantic-settings>=2.6.1",
    "PyYAML>=6.0",
    "tiktoken>=0.8.0",
    "beautifulsoup4>=4.12.0",
    "neo4j>=5.14.0",
    "sse-starlette>=0.8.1",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

